# distributed-model-registry

./: Makefile  README.md
actors/: Makefile
actors/api/: Cargo.toml  Makefile  README.md
actors/api/src/: lib.rs
actors/blobstore/: Cargo.toml  Makefile  README.md
actors/blobstore/src/: lib.rs
actors/model-registry/: Cargo.toml  Makefile  README.md
actors/model-registry/src/: lib.rs
actors/ui/: Cargo.toml  Makefile  README.md
actors/ui/src/: lib.rs
model-registry-interface/: Makefile  codegen.toml  modelregistry.smithy
model-registry-interface/rust/: Cargo.toml
model-registry-interface/rust/src/: lib.rs  modelregistry.rs
