[package]
name = "blobstore"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "blobstore"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.9"
wasmcloud-interface-logging = "0.6"
wasmcloud-interface-blobstore = "0.3"
model-registry-interface = { path = "../../model-registry-interface/rust" }
serde_json = "1.0.85"
bincode = "1.3.3"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
